@@ -1,3 +1,5 @@
+- Refactor: upgraded fenixedu-academic-core and other dependencies
+
 2.3.2 (19-11-2019)
 - Bug fix: Update cgd integration web service to only send fiscal codes that are portuguese (others with 0)
 
